--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "lodash": "^4.17.15",
+    "moment": "^2.25.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-icons": "^3.9.0",
@@ -13,7 +15,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
-    "styled-components": "^5.0.0"
+    "reflexbox": "^4.0.6",
+    "styled-components": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
