--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^16.8.6",
     "react-icons": "^3.9.0",
     "react-is": "^16.8.6",
+    "react-media": "^1.10.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
